# MLOps_G24

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  main.py  objects.inv  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: build_train_image.yaml  codecheck_format.yaml  deploy_docs.yaml  esben_codecheck.yaml  esbens_tests.yaml  tests.yaml
configs/: sweep.yaml
data/processed/: category_mapping.parquet
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: entry_point.md  index.md  monitoring.md  preprocess.md
entry_point/: index.html
models/: classifier.pt
monitoring/: index.html
preprocess/: index.html
reports/: README.md  data_create.html  report.py
reports/monitoring/: drift_training_jobopslag.html  stats_training_jobopslag.html  summary_training_jobopslag.html
search/: search_index.json
src/mlopsg24/: api.py  data.py  data_create.py  data_drift.py  data_preprocess.py  frontend.py  inference.py  model.py  modified_model_timer.py  pruned_model_test.py  train.py
symbolic_link_to_readme/: index.html
tests/: test_data.py  test_data_preprocess.py  test_model.py
tests/integrationtests/: test_api.py
tests/unittests/: test_data_preprocess.py
