[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlopsg24"
version = "0.0.1"
description = "jobannonce classifier"
authors = [
  { name = "g24", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataframely>=2.4.0",
    "fastapi==0.115.6",
    "gliner2>=1.2.3",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "torch==2.2.2",
    "typer==0.15.1",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
]


[tool.uv.sources]
# torch = [
#     { index = "pytorch-cpu" },
# ]
# torchvision = [
#     { index = "pytorch-cpu" },
# ]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
