[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlopsg24"
version = "0.0.1"
description = "jobannonce classifier"
authors = [
  { name = "g24", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataframely>=2.4.0",
    "evidently>=0.7.20",
    "fastapi==0.128.0",
    "gliner2>=1.2.3",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "markdown>=3.10",
    "matplotlib>=3.10.8",
    "mkdocs-material>=4.8.0",
    "numpy>=1.26.4,<2.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "torch==2.2.2",
    "torch-tb-profiler>=0.4.3",
    "torchao>=0.15.0",
    "typer==0.21.1",
    "uvicorn==0.40.0",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.1",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.11",
    "mkdocstrings-python==2.0.1",
    "dotenv>=0.9.9",
    "ty>=0.0.12",
]


[tool.uv.sources]
# torch = [
#     { index = "pytorch-cpu" },
# ]
# torchvision = [
#     { index = "pytorch-cpu" },
# ]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
lint.select = ["I"]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
